Создал Спрайт для СВГ

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
         
                 <ul class="list qualit">
                     <li class="container-element qual">
+                        <svg>
+                            <use href="./images/symbol-defs.svg#icon-satel"></use>
+                        </svg>
                         <h3 class="qualities-title">Внимание к деталям</h3>
                         <p class="qualities-text">
                             Идейные соображения, а также начало повседневной работы по формированию позиции.
@@ -79,13 +82,13 @@
         
                 <ul class="list dir">
                     <li class="container-element dir">
-                        <img src="./images/computer.png" alt="Компьютер" width="370" height="294">
+                        <img src="./images/computer.jpg" alt="Компьютер" width="370" height="294">
                     </li>
                     <li class="container-element dir">
-                        <img src="./images/telephone.png" alt="Телефон" width="370" height="294">
+                        <img src="./images/telephone.jpg" alt="Телефон" width="370" height="294">
                     </li>
                     <li class="container-element dir">
-                        <img src="./images/tablet.png" alt="Планшет" width="370" height="294">
+                        <img src="./images/tablet.jpg" alt="Планшет" width="370" height="294">
                     </li>
                 </ul>
             </div>
