Добавил иконку свг

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <ul class="list qualit">
                     <li class="container-element qual">
                         <svg>
-                            <use href="./images/symbol-defs.svg#icon-satel"></use>
+                            <use href="./images/symbol-defs.svg#icon-logo1"></use>
                         </svg>
                         <h3 class="qualities-title">Внимание к деталям</h3>
                         <p class="qualities-text">
