--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <ul class="list qualit">
                     <li class="container-element qual">
                         <svg>
-                            <use href="./images/symbol-defs.svg#icon-logo1"></use>
+                            <use href="./images/symbol-defs.svg#icon-satel"></use>
                         </svg>
                         <h3 class="qualities-title">Внимание к деталям</h3>
                         <p class="qualities-text">
@@ -54,18 +54,27 @@
                         </p>
                     </li>
                     <li class="container-element qual">
+                        <svg>
+                            <use href="./images/symbol-defs.svg#icon-clock"></use>
+                        </svg>
                         <h3 class="qualities-title">Пунктуальность</h3>
                         <p class="qualities-text">
                             Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
                         </p>
                     </li>
                     <li class="container-element qual">
+                        <svg>
+                            <use href="./images/symbol-defs.svg#icon-computer"></use>
+                        </svg>
                         <h3 class="qualities-title">Планирование</h3>
                         <p class="qualities-text">
                             Равным образом консультация с широким активом в значительной степени обуславливает. 
                         </p>
                     </li>
                     <li class="container-element qual">
+                        <svg>
+                            <use href="./images/symbol-defs.svg#icon-astronaut"></use>
+                        </svg>
                         <h3 class="qualities-title">Современные технологии</h3>
                         <p class="qualities-text">
                             Значимость этих проблем настолько очевидна, что реализация плановых заданий.
