--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         
                 <ul class="list qualit">
                     <li class="container-element qual">
-                        <svg>
+                        <svg class="icon-qual">
                             <use href="./images/symbol-defs.svg#icon-satel"></use>
                         </svg>
                         <h3 class="qualities-title">Внимание к деталям</h3>
@@ -54,7 +54,7 @@
                         </p>
                     </li>
                     <li class="container-element qual">
-                        <svg>
+                        <svg class="icon-qual">
                             <use href="./images/symbol-defs.svg#icon-clock"></use>
                         </svg>
                         <h3 class="qualities-title">Пунктуальность</h3>
@@ -63,7 +63,7 @@
                         </p>
                     </li>
                     <li class="container-element qual">
-                        <svg>
+                        <svg class="icon-qual">
                             <use href="./images/symbol-defs.svg#icon-computer"></use>
                         </svg>
                         <h3 class="qualities-title">Планирование</h3>
@@ -72,7 +72,7 @@
                         </p>
                     </li>
                     <li class="container-element qual">
-                        <svg>
+                        <svg class="icon-qual">
                             <use href="./images/symbol-defs.svg#icon-astronaut"></use>
                         </svg>
                         <h3 class="qualities-title">Современные технологии</h3>
