Сделал ссылки соц сетей правильно

--- a/index.html
+++ b/index.html
@@ -133,28 +133,28 @@
                             <ul class="social-networks">
                                 <li class="social-element">
                                     <a href="" class="icon-spec">
-                                        <svg class="insta" width="44" height="44">
+                                        <svg class="icon insta" width="44" height="44">
                                             <use href="./images/symbol-defs.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-element">
                                     <a href="" class="icon-spec">
-                                        <svg class="twit" width="44" height="44">
+                                        <svg class="icon twit" width="44" height="44">
                                             <use href="./images/symbol-defs.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-element">
                                     <a href="" class="icon-spec">
-                                        <svg class="fb" width="44" height="44">
+                                        <svg class="icon fb" width="44" height="44">
                                             <use href="./images/symbol-defs.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-element">
                                     <a href="" class="icon-spec">
-                                        <svg class="link" width="44" height="44">
+                                        <svg class="icon linked" width="44" height="44">
                                             <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
@@ -170,28 +170,28 @@
                             <ul class="social-networks">
                                 <li class="social-element">
                                     <a href="" class="icon-spec">
-                                        <svg class="insta" width="44" height="44">
+                                        <svg class="icon insta" width="44" height="44">
                                             <use href="./images/symbol-defs.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-element">
                                     <a href="" class="icon-spec">
-                                        <svg class="twit" width="44" height="44">
+                                        <svg class="icon twit" width="44" height="44">
                                             <use href="./images/symbol-defs.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-element">
                                     <a href="" class="icon-spec">
-                                        <svg class="fb" width="44" height="44">
+                                        <svg class="icon fb" width="44" height="44">
                                             <use href="./images/symbol-defs.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-element">
                                     <a href="" class="icon-spec">
-                                        <svg class="link" width="44" height="44">
+                                        <svg class="icon link" width="44" height="44">
                                             <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
@@ -207,28 +207,28 @@
                             <ul class="social-networks">
                                 <li class="social-element">
                                     <a href="" class="icon-spec">
-                                        <svg class="insta" width="44" height="44">
+                                        <svg class="icon insta" width="44" height="44">
                                             <use href="./images/symbol-defs.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-element">
                                     <a href="" class="icon-spec">
-                                        <svg class="twit" width="44" height="44">
+                                        <svg class="icon twit" width="44" height="44">
                                             <use href="./images/symbol-defs.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-element">
                                     <a href="" class="icon-spec">
-                                        <svg class="fb" width="44" height="44">
+                                        <svg class="icon fb" width="44" height="44">
                                             <use href="./images/symbol-defs.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-element">
                                     <a href="" class="icon-spec">
-                                        <svg class="link" width="44" height="44">
+                                        <svg class="icon link" width="44" height="44">
                                             <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
@@ -244,28 +244,28 @@
                             <ul class="social-networks">
                                 <li class="social-element">
                                     <a href="" class="icon-spec">
-                                        <svg class="insta" width="44" height="44">
+                                        <svg class="icon insta" width="44" height="44">
                                             <use href="./images/symbol-defs.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-element">
                                     <a href="" class="icon-spec">
-                                        <svg class="twit" width="44" height="44">
+                                        <svg class="icon twit" width="44" height="44">
                                             <use href="./images/symbol-defs.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-element">
                                     <a href="" class="icon-spec">
-                                        <svg class="fb" width="44" height="44">
+                                        <svg class="icon fb" width="44" height="44">
                                             <use href="./images/symbol-defs.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-element">
                                     <a href="" class="icon-spec">
-                                        <svg class="link" width="44" height="44">
+                                        <svg class="icon link" width="44" height="44">
                                             <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                                         </svg>
                                     </a>
@@ -279,36 +279,48 @@
          <section class="section-clients">
             <div class="container clients">
             <h3 class="clients-title">Постоянные клиенты</h3>
-                 <ul class="list-clients">
-                     <li class="container-client">
-                        <svg class="client">
-                            <use href="./images/symbol-defs.svg#icon-logo1" width="44" height="49"></use>
-                        </svg>
+                 <ul class="list">
+                     <li class="list-client">
+                         <a href="" class="container-client">
+                            <svg class="client">
+                                <use href="./images/symbol-defs.svg#icon-logo1" width="44" height="49"></use>
+                            </svg>
+                         </a>
                      </li>
-                     <li class="container-client">
-                        <svg class="client">
-                            <use href="./images/symbol-defs.svg#icon-logo2" width="40" height="52"></use>
-                        </svg>
+                     <li class="list-client">
+                         <a href="" class="container-client">
+                            <svg class="client">
+                                <use href="./images/symbol-defs.svg#icon-logo2" width="40" height="52"></use>
+                            </svg>
+                         </a>
                     </li>
-                    <li class="container-client">
-                        <svg class="client">
-                            <use href="./images/symbol-defs.svg#icon-logo3" width="41" height="42"></use>
-                        </svg>
+                    <li class="list-client">
+                        <a href="" class="container-client">
+                            <svg class="client">
+                                <use href="./images/symbol-defs.svg#icon-logo3" width="41" height="42"></use>
+                            </svg>
+                        </a>
                     </li>
-                    <li class="container-client">
-                        <svg class="client">
-                            <use href="./images/symbol-defs.svg#icon-logo4" width="79" height="42"></use>
-                        </svg>
+                    <li class="list-client">
+                        <a href="" class="container-client">
+                            <svg class="client">
+                                <use href="./images/symbol-defs.svg#icon-logo4" width="79" height="42"></use>
+                            </svg>
+                        </a>
                     </li>
-                    <li class="container-client">
-                        <svg class="client">
-                            <use href="./images/symbol-defs.svg#icon-logo5" width="59" height="47"></use>
-                        </svg>
+                    <li class="list-client">
+                        <a href="" class="container-client">
+                            <svg class="client">
+                                <use href="./images/symbol-defs.svg#icon-logo5" width="59" height="47"></use>
+                            </svg>
+                        </a>
                     </li>
-                    <li class="container-client">
-                        <svg class="client">
-                            <use href="./images/symbol-defs.svg#icon-logo6" width="88" height="45"></use>
-                        </svg>
+                    <li class="list-client">
+                        <a href="" class="container-client">
+                            <svg class="client">
+                                <use href="./images/symbol-defs.svg#icon-logo6" width="88" height="45"></use>
+                            </svg>
+                        </a>
                     </li>
                  </ul>
              </div>
@@ -333,28 +345,28 @@
                     <ul class="social-networks">
                         <li class="social-element">
                             <a href="" class="icon-spec">
-                                <svg class="insta" width="44" height="44">
+                                <svg class="footer-icon" width="44" height="44">
                                     <use href="./images/symbol-defs.svg#icon-instagram"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-element">
                             <a href="" class="icon-spec">
-                                <svg class="twit" width="44" height="44">
+                                <svg class="footer-icon" width="44" height="44">
                                     <use href="./images/symbol-defs.svg#icon-twitter"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-element">
                             <a href="" class="icon-spec">
-                                <svg class="fb" width="44" height="44">
+                                <svg class="footer-icon" width="44" height="44">
                                     <use href="./images/symbol-defs.svg#icon-facebook"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="social-element">
                             <a href="" class="icon-spec">
-                                <svg class="link" width="44" height="44">
+                                <svg class="footer-icon" width="44" height="44">
                                     <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                                 </svg>
                             </a>
