--- a/index.html
+++ b/index.html
@@ -282,42 +282,42 @@
                  <ul class="list">
                      <li class="list-client">
                          <a href="" class="container-client">
-                            <svg class="client">
+                            <svg class="client" width="44" height="49">
                                 <use href="./images/symbol-defs.svg#icon-logo1" width="44" height="49"></use>
                             </svg>
                          </a>
                      </li>
                      <li class="list-client">
                          <a href="" class="container-client">
-                            <svg class="client">
+                            <svg class="client" width="40" height="52">
                                 <use href="./images/symbol-defs.svg#icon-logo2" width="40" height="52"></use>
                             </svg>
                          </a>
                     </li>
                     <li class="list-client">
                         <a href="" class="container-client">
-                            <svg class="client">
+                            <svg class="client" width="41" height="42">
                                 <use href="./images/symbol-defs.svg#icon-logo3" width="41" height="42"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="list-client">
                         <a href="" class="container-client">
-                            <svg class="client">
+                            <svg class="client" width="79" height="42";>
                                 <use href="./images/symbol-defs.svg#icon-logo4" width="79" height="42"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="list-client">
                         <a href="" class="container-client">
-                            <svg class="client">
+                            <svg class="client" width="59" height="47">
                                 <use href="./images/symbol-defs.svg#icon-logo5" width="59" height="47"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="list-client">
                         <a href="" class="container-client">
-                            <svg class="client">
+                            <svg class="client" width="88" height="45">
                                 <use href="./images/symbol-defs.svg#icon-logo6" width="88" height="45"></use>
                             </svg>
                         </a>
