--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <li class="container-element qual">
                         <div class="qualit-ico">
                             <svg class="icon-qual">
-                                <use href="./images/symbol-defs.svg#icon-satel"></use>
+                                <use href="./images/symbol-defs.svg#icon-satel" width="65" height="70"></use>
                             </svg>
                         </div>
                         <h3 class="qualities-title">Внимание к деталям</h3>
@@ -66,7 +66,7 @@
                     <li class="container-element qual">
                         <div class="qualit-ico">
                             <svg class="icon-qual">
-                                <use href="./images/symbol-defs.svg#icon-clock"></use>
+                                <use href="./images/symbol-defs.svg#icon-clock" width="67" height="70"></use>
                             </svg>
                         </div>
                         <h3 class="qualities-title">Пунктуальность</h3>
@@ -77,7 +77,7 @@
                     <li class="container-element qual">
                         <div class="qualit-ico">
                             <svg class="icon-qual">
-                                <use href="./images/symbol-defs.svg#icon-computer"></use>
+                                <use href="./images/symbol-defs.svg#icon-computer" width="70" height="53"></use>
                             </svg>
                         </div>
                         <h3 class="qualities-title">Планирование</h3>
@@ -88,7 +88,7 @@
                     <li class="container-element qual">
                         <div class="qualit-ico">
                             <svg class="icon-qual">
-                                <use href="./images/symbol-defs.svg#icon-astronaut"></use>
+                                <use href="./images/symbol-defs.svg#icon-astronaut" width="55" height="60"></use>
                             </svg>
                         </div>
                         <h3 class="qualities-title">Современные технологии</h3>
