--- a/portfolio.html
+++ b/portfolio.html
@@ -143,50 +143,50 @@
     <!-- Футер -->
     <footer>
         <section class="container">
-          <div class="footer-nav">
-              <div class="foot">
-                  <address class="footer-address">
-                      <a href="" class="logo-footer"><span class="logo-web">Web</span>Studio</a>
-                      <p>г. Киев, пр-т Леси Украинки, 26</p>
-                      <a href="mailto:info@example.com" class="contact">info@example.com</a>
-                      <a href="tel:+380991111111" class="contact">+38 099 111 11 11</a>
-                  </address>
-              </div>
-              <div class="container-social">
-                  <p class="footer-text">ПРИСОЕДИНЯЙТЕСЬ</p>
-                  <ul class="social-networks">
-                      <li class="social-element">
-                          <a href="" class="icon-spec">
-                              <svg class="insta" width="44" height="44">
-                                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
-                              </svg>
-                          </a>
-                      </li>
-                      <li class="social-element">
-                          <a href="" class="icon-spec">
-                              <svg class="twit" width="44" height="44">
-                                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
-                              </svg>
-                          </a>
-                      </li>
-                      <li class="social-element">
-                          <a href="" class="icon-spec">
-                              <svg class="fb" width="44" height="44">
-                                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
-                              </svg>
-                          </a>
-                      </li>
-                      <li class="social-element">
-                          <a href="" class="icon-spec">
-                              <svg class="link" width="44" height="44">
-                                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
-                              </svg>
-                          </a>
-                      </li>
-                  </ul>
-              </div>
-          </div>
-      </section>
-   </footer>
+        <div class="footer-nav">
+            <div class="foot">
+                <address class="footer-address">
+                    <a href="" class="logo-footer"><span class="logo-web">Web</span>Studio</a>
+                    <p>г. Киев, пр-т Леси Украинки, 26</p>
+                    <a href="mailto:info@example.com" class="contact">info@example.com</a>
+                    <a href="tel:+380991111111" class="contact">+38 099 111 11 11</a>
+                </address>
+            </div>
+            <div class="container-social">
+                <p class="footer-text">ПРИСОЕДИНЯЙТЕСЬ</p>
+                <ul class="social-networks">
+                    <li class="social-element">
+                        <a href="" class="icon-spec">
+                            <svg class="footer-icon" width="44" height="44">
+                                <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-element">
+                        <a href="" class="icon-spec">
+                            <svg class="footer-icon" width="44" height="44">
+                                <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-element">
+                        <a href="" class="icon-spec">
+                            <svg class="footer-icon" width="44" height="44">
+                                <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="social-element">
+                        <a href="" class="icon-spec">
+                            <svg class="footer-icon" width="44" height="44">
+                                <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    </footer>
 </body>
 </html>
