Добавил анимационній текст карточкам

--- a/index.html
+++ b/index.html
@@ -107,13 +107,22 @@
         
                 <ul class="list dir">
                     <li class="container-element dir">
-                        <img src="./images/computer.jpg" alt="Компьютер" width="370" height="294">
+                        <div class="direction-block">
+                            <img src="./images/computer.jpg" alt="Компьютер" width="370" height="294">
+                            <p class="direction-text">Десктопные приложения</p>
+                        </div>
                     </li>
                     <li class="container-element dir">
-                        <img src="./images/telephone.jpg" alt="Телефон" width="370" height="294">
+                        <div class="direction-block">
+                            <img src="./images/telephone.jpg" alt="Телефон" width="370" height="294">
+                            <p class="direction-text">Мобильные приложения</p>
+                        </div>
                     </li>
                     <li class="container-element dir">
-                        <img src="./images/tablet.jpg" alt="Планшет" width="370" height="294">
+                        <div class="direction-block">
+                            <img src="./images/tablet.jpg" alt="Планшет" width="370" height="294">
+                            <p class="direction-text">Дизайнерские решения</p>
+                        </div>
                     </li>
                 </ul>
             </div>
