--- a/portfolio.html
+++ b/portfolio.html
@@ -55,85 +55,112 @@
 
                 <ul class="list projects">
                     <li class="container-element proj">
-                            <a href="" class="project">
+                        <a href="" class="project">
+                            <div class="project-block">
                                 <img src="./images/technocrack.jpg" alt="technocrack" width="370" height="294">
-                            </a> 
-                         <div class="description"> 
-                            <h2 class="project-title">Технокряк</h2>
-                            <p class="project-text">Веб-сайт</p>
-                        </div>
+                                <p class="project-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                            <div class="description"> 
+                                <h2 class="project-title">Технокряк</h2>
+                                <p class="project-text">Веб-сайт</p>
+                            </div>
+                        </a> 
                     </li>
                     <li class="container-element proj">
                         <a href="" class="project">
-                            <img src="./images/poster.jpg" alt="poster" width="370" height="294">
+                            <div class="project-block">
+                                <img src="./images/poster.jpg" alt="poster" width="370" height="294">
+                                <p class="project-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                            <div class="description">
+                                <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
+                                <p class="project-text">Дизайн</p>
+                            </div>
                         </a>
-                        <div class="description">
-                            <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
-                            <p class="project-text">Дизайн</p>
-                        </div>
                     </li>
                     <li class="container-element proj">
                         <a href="" class="project">
-                            <img src="./images/seafood.jpg" alt="seafood" width="370" height="294">
+                            <div class="project-block">
+                                <img src="./images/seafood.jpg" alt="seafood" width="370" height="294">
+                                <p class="project-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                            <div class="description">
+                                <h2 class="project-title">Ресторан Seafood</h2>
+                                <p class="project-text">Приложение</p>
+                            </div>
                         </a>
-                        <div class="description">
-                            <h2 class="project-title">Ресторан Seafood</h2>
-                            <p class="project-text">Приложение</p>
-                        </div>
                     </li>
                     <li class="container-element proj">
                         <a href="" class="project">
-                            <img src="./images/headphones.jpg" alt="headphones" width="370" height="294">
+                            <div class="project-block">
+                                <img src="./images/headphones.jpg" alt="headphones" width="370" height="294">
+                                <p class="project-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                            <div class="description">
+                                <h2 class="project-title">Проект Prime</h2>
+                                <p class="project-text">Маркетинг</p>
+                            </div>
                         </a>
-                        <div class="description">
-                            <h2 class="project-title">Проект Prime</h2>
-                            <p class="project-text">Маркетинг</p>
-                        </div>
                     </li>
                     <li class="container-element proj">
                         <a href="" class="project">
-                            <img src="./images/boxes.jpg" alt="boxes" width="370" height="294">
+                            <div class="project-block">
+                                <img src="./images/boxes.jpg" alt="boxes" width="370" height="294">
+                                <p class="project-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                            <div class="description">
+                                <h2 class="project-title">Проект Boxes</h2>
+                                <p class="project-text">Приложение</p>
+                            </div>
                         </a>
-                        <div class="description">
-                            <h2 class="project-title">Проект Boxes</h2>
-                            <p class="project-text">Приложение</p>
-                        </div>
                     </li>
                     <li class="container-element proj">
                         <a href="" class="project">
-                            <img src="./images/inspiration.jpg" alt="inspiration" width="370" height="294">
+                            <div class="project-block">
+                                <img src="./images/inspiration.jpg" alt="inspiration" width="370" height="294">
+                                <p class="project-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                            <div class="description"> 
+                                <h2 class="project-title">Inspiration has no Borders</h2>
+                                <p class="project-text">Веб-сайт</p>
+                            </div>
                         </a>
-                        <div class="description"> 
-                            <h2 class="project-title">Inspiration has no Borders</h2>
-                            <p class="project-text">Веб-сайт</p>
-                        </div>
                     </li>
                     <li class="container-element proj">
                         <a href="" class="project">
-                            <img src="images/limitededition.jpg" alt="limitededition" width="370" height="294">
+                            <div class="project-block">
+                                <img src="images/limitededition.jpg" alt="limitededition" width="370" height="294">
+                                <p class="project-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                            <div class="description">
+                                <h2 class="project-title">Издание Limited Edition</h2>
+                                <p class="project-text">Дизайн</p>
+                            </div>
                         </a>
-                        <div class="description">
-                            <h2 class="project-title">Издание Limited Edition</h2>
-                            <p class="project-text">Дизайн</p>
-                        </div>
                     </li>
                     <li class="container-element proj">
                         <a href="" class="project">
-                            <img src="images/lab.jpg" alt="lab" width="370" height="294">
+                            <div class="project-block">
+                                <img src="images/lab.jpg" alt="lab" width="370" height="294">
+                                <p class="project-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                            <div class="description">
+                                <h2 class="project-title">Проект LAB</h2>
+                                <p class="project-text">Маркетинг</p>
+                            </div>
                         </a>
-                        <div class="description">
-                            <h2 class="project-title">Проект LAB</h2>
-                            <p class="project-text">Маркетинг</p>
-                        </div>
                     </li>
                     <li class="container-element proj">
-                        <a href="" class="project">  
-                            <img src="images/growingbusiness.jpg" alt="growingbusiness" width="370" height="294">
+                        <a href="" class="project"> 
+                            <div class="project-block">
+                                <img src="images/growingbusiness.jpg" alt="growingbusiness" width="370" height="294">
+                                <p class="project-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
+                            <div class="description">    
+                                <h2 class="project-title">Growing Business</h2>
+                                <p class="project-text">Приложение</p>
+                            </div>
                         </a>
-                        <div class="description">    
-                            <h2 class="project-title">Growing Business</h2>
-                            <p class="project-text">Приложение</p>
-                        </div>
                     </li>
                 </ul>
             </div>      
