Исправил все фокусы

--- a/index.html
+++ b/index.html
@@ -150,28 +150,28 @@
                             <p class="position">Product Designer</p>
                             <ul class="social-networks">
                                 <li class="social-element">
-                                    <a href="" class="icon-spec">
+                                    <a href="#" class="icon-spec">
                                         <svg class="icon insta" width="44" height="44">
                                             <use href="./images/symbol-defs.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-element">
-                                    <a href="" class="icon-spec">
+                                    <a href="#" class="icon-spec">
                                         <svg class="icon twit" width="44" height="44">
                                             <use href="./images/symbol-defs.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-element">
-                                    <a href="" class="icon-spec">
+                                    <a href="#" class="icon-spec">
                                         <svg class="icon fb" width="44" height="44">
                                             <use href="./images/symbol-defs.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-element">
-                                    <a href="" class="icon-spec">
+                                    <a href="#" class="icon-spec">
                                         <svg class="icon linked" width="44" height="44">
                                             <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                                         </svg>
@@ -187,28 +187,28 @@
                             <p class="position">Frontend Developer</p>
                             <ul class="social-networks">
                                 <li class="social-element">
-                                    <a href="" class="icon-spec">
+                                    <a href="#" class="icon-spec">
                                         <svg class="icon insta" width="44" height="44">
                                             <use href="./images/symbol-defs.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-element">
-                                    <a href="" class="icon-spec">
+                                    <a href="#" class="icon-spec">
                                         <svg class="icon twit" width="44" height="44">
                                             <use href="./images/symbol-defs.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-element">
-                                    <a href="" class="icon-spec">
+                                    <a href="#" class="icon-spec">
                                         <svg class="icon fb" width="44" height="44">
                                             <use href="./images/symbol-defs.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-element">
-                                    <a href="" class="icon-spec">
+                                    <a href="#" class="icon-spec">
                                         <svg class="icon link" width="44" height="44">
                                             <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                                         </svg>
@@ -224,28 +224,28 @@
                             <p class="position">Marketing</p>
                             <ul class="social-networks">
                                 <li class="social-element">
-                                    <a href="" class="icon-spec">
+                                    <a href="#" class="icon-spec">
                                         <svg class="icon insta" width="44" height="44">
                                             <use href="./images/symbol-defs.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-element">
-                                    <a href="" class="icon-spec">
+                                    <a href="#" class="icon-spec">
                                         <svg class="icon twit" width="44" height="44">
                                             <use href="./images/symbol-defs.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-element">
-                                    <a href="" class="icon-spec">
+                                    <a href="#" class="icon-spec">
                                         <svg class="icon fb" width="44" height="44">
                                             <use href="./images/symbol-defs.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-element">
-                                    <a href="" class="icon-spec">
+                                    <a href="#" class="icon-spec">
                                         <svg class="icon link" width="44" height="44">
                                             <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                                         </svg>
@@ -261,28 +261,28 @@
                             <p class="position">UI Designer</p>
                             <ul class="social-networks">
                                 <li class="social-element">
-                                    <a href="" class="icon-spec">
+                                    <a href="#" class="icon-spec">
                                         <svg class="icon insta" width="44" height="44">
                                             <use href="./images/symbol-defs.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-element">
-                                    <a href="" class="icon-spec">
+                                    <a href="#" class="icon-spec">
                                         <svg class="icon twit" width="44" height="44">
                                             <use href="./images/symbol-defs.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-element">
-                                    <a href="" class="icon-spec">
+                                    <a href="#" class="icon-spec">
                                         <svg class="icon fb" width="44" height="44">
                                             <use href="./images/symbol-defs.svg#icon-facebook"></use>
                                         </svg>
                                     </a>
                                 </li>
                                 <li class="social-element">
-                                    <a href="" class="icon-spec">
+                                    <a href="#" class="icon-spec">
                                         <svg class="icon link" width="44" height="44">
                                             <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                                         </svg>
