--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
 
                 <ul class="list projects">
                     <li class="container-element proj">
-                        <a href="" class="project">
+                        <a href="#" class="project">
                             <div class="project-block">
                                 <img src="./images/technocrack.jpg" alt="technocrack" width="370" height="294">
                                 <p class="project-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -67,7 +67,7 @@
                         </a> 
                     </li>
                     <li class="container-element proj">
-                        <a href="" class="project">
+                        <a href="#" class="project">
                             <div class="project-block">
                                 <img src="./images/poster.jpg" alt="poster" width="370" height="294">
                                 <p class="project-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -79,7 +79,7 @@
                         </a>
                     </li>
                     <li class="container-element proj">
-                        <a href="" class="project">
+                        <a href="#" class="project">
                             <div class="project-block">
                                 <img src="./images/seafood.jpg" alt="seafood" width="370" height="294">
                                 <p class="project-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -91,7 +91,7 @@
                         </a>
                     </li>
                     <li class="container-element proj">
-                        <a href="" class="project">
+                        <a href="#" class="project">
                             <div class="project-block">
                                 <img src="./images/headphones.jpg" alt="headphones" width="370" height="294">
                                 <p class="project-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -103,7 +103,7 @@
                         </a>
                     </li>
                     <li class="container-element proj">
-                        <a href="" class="project">
+                        <a href="#" class="project">
                             <div class="project-block">
                                 <img src="./images/boxes.jpg" alt="boxes" width="370" height="294">
                                 <p class="project-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -115,7 +115,7 @@
                         </a>
                     </li>
                     <li class="container-element proj">
-                        <a href="" class="project">
+                        <a href="#" class="project">
                             <div class="project-block">
                                 <img src="./images/inspiration.jpg" alt="inspiration" width="370" height="294">
                                 <p class="project-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -127,7 +127,7 @@
                         </a>
                     </li>
                     <li class="container-element proj">
-                        <a href="" class="project">
+                        <a href="#" class="project">
                             <div class="project-block">
                                 <img src="images/limitededition.jpg" alt="limitededition" width="370" height="294">
                                 <p class="project-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -139,7 +139,7 @@
                         </a>
                     </li>
                     <li class="container-element proj">
-                        <a href="" class="project">
+                        <a href="#" class="project">
                             <div class="project-block">
                                 <img src="images/lab.jpg" alt="lab" width="370" height="294">
                                 <p class="project-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -151,7 +151,7 @@
                         </a>
                     </li>
                     <li class="container-element proj">
-                        <a href="" class="project"> 
+                        <a href="#" class="project"> 
                             <div class="project-block">
                                 <img src="images/growingbusiness.jpg" alt="growingbusiness" width="370" height="294">
                                 <p class="project-description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
