--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
     <!-- Шапка сайта -->
     <header>
         <div class="container header">
-            <nav>
+            <nav class="menu-link">
                 <a href="" class="logo-header"><span class="logo-web">Web</span>Studio</a>
 
                 <ul class="site-nav">
